# xorq-datafusion

./: .envrc  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci-lint.yml  ci-pre-release.yml  ci-release.yml  ci-test.yml
nix/: commands.nix  xorq-datafusion.nix
python/tests/: conftest.py  test_basic.py
python/xorq_datafusion/: __init__.py
src/: context.rs  dataframe.rs  dataset.rs  dataset_exec.rs  errors.rs  expr.rs  ibis_filter_expression.rs  ibis_table.rs  ibis_table_exec.rs  lib.rs  model.rs  optimizer.rs  provider.rs  pyarrow_filter_expression.rs  pyarrow_util.rs  record_batch.rs  udaf.rs  udf.rs  udwf.rs  utils.rs
src/common/: data_type.rs
src/expr/: aggregate.rs  aggregate_expr.rs  analyze.rs  create_memory_table.rs  create_view.rs  distinct.rs  drop_table.rs  empty_relation.rs  explain.rs  extension.rs  filter.rs  join.rs  limit.rs  literal.rs  projection.rs  repartition.rs  sort.rs  subquery.rs  subquery_alias.rs  table_scan.rs  union.rs  window.rs
src/sql/: logical.rs
