[package]
name = "xorq-datafusion"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "xorq_datafusion"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "=1.44.1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
pyo3 = { version = "=0.23.5", features = ["extension-module", "abi3", "abi3-py38"] }
pyo3-async-runtimes = { version = "=0.23.0", features = ["tokio-runtime"]}
datafusion =  { version = "=46.0.1", features = ["pyarrow", "avro"]}
datafusion-common = { version = "=46.0.1", features = ["pyarrow"] }
datafusion-expr = "=46.0.1"
prost = "=0.13.5"
datafusion-optimizer = "=46.0.1"
datafusion-sql = "=46.0.1"
futures = "=0.3.31"
async-trait = "=0.1.88"
arrow = "=54.3.0"
arrow-ord = "=54.3.0"
datafusion-functions-aggregate = { version = "=46.0.1" }
aws-config = "=0.101.0"
aws-credential-types = "=0.101.0"
object_store = { version = "=0.11.2", features = ["aws", "gcp", "http"] }
url = "=2.5.4"
